--- a/assignments/assignment_1_GPT.ipynb
+++ b/assignments/assignment_1_GPT.ipynb
@@ -11,13 +11,13 @@
     "\n",
     "The goal of this assignment is to master the **Transformer architecture**, which is the engine behind modern Large Language Models (LLMs) such as ChatGPT, Gemini, and DeepSeek. We will implement a compact, decoder-only transformer from scratch, closely following the [NanoGPT](https://github.com/karpathy/nanoGPT) project by Andrej Karpathy.\n",
     "\n",
-    "We will train this model on textual figure captions from the [Open-MELON dataset](https://huggingface.co/datasets/MartiHan/Open-MELON-VL-2.5K), which contains descriptions of histopathology images (specifically melanocytic lesions). After training, your model will be able to generate **synthetic captions** when prompted with a short starting sequence. Note that at this point we do not associate these captions with image data. We will go into vision-language models, that can jointly model both image and text data in the next assignment. For now, we focus on text, but, as you will see in Assignment 2, extending the Trasformer architecture to model image data is not a big deal.\n",
+    "We will train this model on textual figure captions from the [Open-MELON dataset](https://huggingface.co/datasets/MartiHan/Open-MELON-VL-2.5K), which contains descriptions of histopathology images (specifically melanocytic lesions). After training, your model will be able to generate **synthetic captions** when prompted with a short starting sequence. Note that at this point we do not associate these captions with image data. We will go into vision-language models that can jointly model both image and text data in the next assignment. For now, we focus on text, but, as you will see in Assignment 2, extending the Trasformer architecture to model image data is a straightforward extension. \n",
     "\n",
-    "This dataset was specifically prepared for this course (work done by Martina Hanusova). While this dataset is certainly not as large as the massive corpora used to train ChatGPT and consists of open-access figures and captions rather than medical images and clinical reports, it offers two  advantages. First, the content is highly dense with relevant medical terminology, which makes the training process is efficient. Second, because we are using public data from medical publications, we avoid the complex legal and ethical hurdles associated with handling private patient data.\n",
+    "This dataset was specifically prepared for this course (work done by Martina Hanusova). While this dataset is certainly not as large as the massive corpora used to train ChatGPT and consists of open-access figures and captions rather than medical images and clinical reports, it offers two  advantages. First, the content is highly dense with relevant medical terminology, which makes the training process efficient. Second, because we are using public data from medical publications, we avoid the complex legal and ethical hurdles associated with handling private patient data.\n",
     "\n",
     "## Preparation\n",
     "\n",
-    "We start with the assumption that you have a solid understanding of fundamental machine learning and neural network concepts, such as linear regression, gradient descent, backpropagation, and loss functions; if you need a refresher, please review materials from the previous courses (e.g. 8BB020 Introduction to Machine Learning). You must prepare for this assignment by mastering the Transformer architecture, specifically understanding self-attention mechanisms in neural network and the distinction between encoder models (like BERT) and the decoder-only architectures (like GPT) used for generative tasks.\n",
+    "We start with the assumption that you have a solid understanding of fundamental machine learning and neural network concepts, such as linear regression, gradient descent, backpropagation, and loss functions; if you need a refresher, please review materials from the previous courses (e.g. 8BB020 Introduction to Machine Learning). You must prepare for this assignment by mastering the Transformer architecture, specifically understanding self-attention mechanisms in neural network and the distinction between encoder models and the decoder-only architectures (like GPT) used for generative tasks.\n",
     "\n",
     "Beyond the architecture, you must also familiarize yourself with the basics of Computational Pathology to understand the medical context of our dataset (we will be generating captions for H&E stained histopathology images).\n",
     "\n",
@@ -25,13 +25,13 @@
     "\n",
     "| Type | Length | Link | Why is it relevant? |\n",
     "| :--- | :--- | :--- | :--- |\n",
-    "| Video | 8 min. | [Large Language Models explained briefly (3Blue1Brown)](https://www.youtube.com/watch?v=LPZh9BOjkQs&list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi&index=5) | This video from the [3Blue1Brown]() YouTube channel was originally made as an exibit for Computer History Museum. It gives a very \"gentle\" and high-level introduction of the mechanics of how (large) language models work and are trained. This includes nthe concept of autoregressiove modelling (predicting the next word in a sequence), (pre)-training of large language models from text datasets (the \"P\" in GPT stands for \"pretrained\") as well as reinforcement learning with human feedback. While in this course we will keep to training of (relatively small) language models, it is good to have the complete picture.  The entire 3Blue1Brown channel is a goldmine of high-quality educational content on a wide range of topics and we will recommend quite a few vieos from it in this course. In fact, the entire [Neural networks]() playlist is highly recommended, also as a refresher to more fundamental concepts such as backpropagation. | \n",
+    "| Video | 8 min. | [Large Language Models explained briefly (3Blue1Brown)](https://www.youtube.com/watch?v=LPZh9BOjkQs&list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi&index=5) | This video from the [3Blue1Brown]() YouTube channel was originally made as an exibit for Computer History Museum. It gives a very \"gentle\" and high-level introduction of the mechanics of how (large) language models work and are trained. This includes the concept of autoregressive modelling (predicting the next word in a sequence), (pre)-training of large language models from text datasets (the \"P\" in GPT stands for \"pretrained\") as well as reinforcement learning with human feedback. While in this course we will keep to training of (relatively small) language models, it is good to have the complete picture.  The entire 3Blue1Brown channel is a very high-quality source of educational content on a wide range of topics. In fact, the entire [Neural networks]() playlist is highly recommended, also as a refresher to more fundamental concepts such as backpropagation. | \n",
     "| Paper | 10 pg. | [Attention Is All You Need (Vaswani et al.)](https://arxiv.org/abs/1706.03762) | This is the paper that introduced the Transformer architecture to the world. It is a must-read for anyone interested in the subject. The paper is relatively short (10 pages without references), however it can be a bit \"dense\" for beginners. That is ok, as the most important thing to understand is the tokenization of text and the self-attention mechanism. Both of these concepts are also covered in the next two recommended videos so it is best that you iterate between watching the videos and reading the paper. Note that one thing that might be particularly confusing is that the neural network architecture in this paper has both an encoder and decoder part. This is because the application that is addressed here is natural language translation (machine translation). In this setup, the encoder part is used to encode the text in the original language and the decoder is used to translate this encoded text into the target language. In this course we will focus on decoder-only architectures, which are used for generative tasks such as text generation. | \n",
     "| Video | 27 min. | [Transformers, the tech behind LLMs (3Blue1Brown)](https://www.youtube.com/watch?v=wjZofJX0v4M&list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi) | This video provides a visual overview of the data flow within a Transformer, specifically focusing on GPT-style (decoder-only) models. It explains tokenization, embeddings (how vectors encode semantic meaning), and the final softmax layer used to predict the next token. It serves as a high-level roadmap of the architecture before diving into specific components in the next video. |\n",
     "| Video | 26 min. | [Attention in transformers (3Blue1Brown)](https://www.youtube.com/watch?v=eMlx5fFNoYc&list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi) |This chapter breaks down the Attention mechanism (Self-Attention), which is the core innovation of the Transformer. It details the Query, Key, and Value (Q, K, V) matrices and visualizes how the attention pattern is calculated via dot products. It explains how the model uses these to \"attend\" to relevant context (updating word meanings based on surrounding words) and introduces concepts like multi-head attention and masking. |\n",
     "| Interactive tool | ~25 min. | [Transformer explainer (poloclub)](https://poloclub.github.io/transformer-explainer/)| This is a great interactive tool that explains in steps how transformer models for language work and make predictions. It should take around 25 minutes to go over all the steps in the tool for one example, but it might be usefult to spend some more time and look at different examples. | \n",
     "| Videos | 120 min. | [Let's build GPT: from scratch, in code, spelled out (Andrej Karpathy)](https://www.youtube.com/watch?v=kCc8FmEb1nY) | This video series provides a step-by-step guide to building a GPT-style transformer from scratch. It covers the entire process, from data preparation to model training and evaluation. It is a great resource for understanding the mechanics of how GPT-style models work and how to implement them in code. |\n",
-    "| Paper | 35 pg. | [Large Language Models: A Survey (Minaee et al.)](https://arxiv.org/abs/2402.06196)] | This survey papers is a good resource to get the \"big picture\" of all the large language models available and how they differ in their methodology and implementation. Treat this resource as **optional**. It is not required to complete the exercises in this assignments, but it is very useful to get a broader understanding of the state-of-the-art, which you might find useful for **generating ideas for the open assignment** or future projects (e.g. for your BEP or MSc projects). |"
+    "| Paper | 35 pg. | [Large Language Models: A Survey (Minaee et al.)](https://arxiv.org/abs/2402.06196)] | This survey papers is a good resource to get the \"big picture\" of various large language models and how they differ in their methodology and implementation. Treat this resource as **optional**. It is not required to complete the exercises in this assignments, but it is very useful to get a broader understanding of the state-of-the-art, which you might find useful for **generating ideas for the open assignment** or future projects (e.g. for your BEP or MSc projects). |"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "source": [
     "## Exercises: Theory\n",
     "\n",
-    "⚠️ *The answers to the theory exercisesare NOT to be submitted as part of the assignment deliverables. They can, however, be used to check your understanding of the materias and to prepare for the flipped classroom. You CAN include your discussion about the exercises in the flipped classroom log.*\n",
+    "⚠️ *The answers to the theory exercises are NOT to be submitted as part of the assignment deliverables. They can, however, be used to check your understanding of the materias and to prepare for the flipped classroom. You CAN include your discussion about the exercises in the flipped classroom log.*\n",
     "\n",
     "#### Exercise T.1 \n",
     "\n",
@@ -51,13 +51,13 @@
     "\n",
     "In contrast, many other neural networks process their entire input in parallel (all at once) to maximize speed.\n",
     "\n",
-    "If we modified the architecture to predict every token in a paragraph simultaneously (in parallel) rather than one by one, why would the resulting text likely be grammatically incoherent?\n",
+    "If we modified the architecture to predict every token in a paragraph simultaneously (in parallel) rather than one by one, is the resulting text likely to be grammatically coherent? Explain your reasoning.\n",
     "\n",
     "#### Exercise T.2\n",
     "\n",
     "In this assignment (as you will see later), we define tokens to be individual characters (e.g., 'a', 'b', 'c'). This keeps our vocabulary small and the implementation simple. In contrast, the standard practice for modern Large Language Models is to use sub-word tokenization, which groups frequent character patterns into single tokens to process text more efficiently. \n",
     "\n",
-    "Assume that we define tokens to be entire sentences. What would be the consequence of this when generating text?\n",
+    "Assume that we take this concept one step further and define tokens to be entire sentences. What would be the consequence of this when generating text?\n",
     "\n",
     "#### Exercise T.3\n",
     "\n",
@@ -65,11 +65,11 @@
     "\n",
     "This is different from Encoder models, which use Bidirectional Attention, allowing tokens to see the entire sentence (past and future) at once.\n",
     "\n",
-    "Assume that during training, we feed the entire completed sentence into the model at once. Will this model still be useful for generating text?\n",
+    "Assume that during training, we feed the entire completed sentence into the model at once. Will this model still be useful for generating text? Explain your reasoning. \n",
     "\n",
     "#### Exercise T.4 \n",
     "\n",
-    "Decoder-only models (like GPT) are mathematically optimized to maximize the probability of the text sequence. This means that if they were trained with medical report data,they strive to generate text that \"looks\" and \"sounds\" like a real medical report. They are not optimized to check for factual truth.\n",
+    "Decoder-only models (like GPT) are mathematically optimized to maximize the probability of the text sequence. This means that if they were trained with medical report data, they strive to generate text that \"looks\" and \"sounds\" like a real medical report. They are not optimized to check for factual truth.\n",
     "\n",
     "Assume that your trained model generates a synthetic pathology caption that includes specific quantitative details: \"The sample shows a high mitotic rate of 8 figures per 10 HPF.\"\n",
     "\n",
@@ -122,12 +122,12 @@
     "### Install Required Packages\n",
     "\n",
     "This notebook uses:\n",
-    "- 'numpy' for basic math operations\n",
+    "- `numpy` for basic math operations\n",
     "- `datasets` to load captions from Hugging Face\n",
     "- PyTorch to implement NanoGPT-like model + training loop\n",
     "- `tqdm` for displaying progress bars\n",
     "\n",
-    "All other used packages should already be available on your system.\n",
+    "All other used packages should already be available on your system. If you need help with setting up your Pyyhon environment, please ask help from your assigned TA.\n",
     "\n",
     "Let's install the required packages:"
    ]
@@ -907,7 +907,7 @@
     "\n",
     "#### Exercise 2\n",
     "\n",
-    "Train the model and plot training loss and validation loss as a function of training iterations. Modify one of the following and observe the effect:\n",
+    "Train the model and plot training loss and validation loss as a function of training iterations. Modify the following hyperparameters and observe the effect:\n",
     "- Learning rate\n",
     "- Batch size\n",
     "- Evaluation interval\n",
@@ -921,7 +921,7 @@
     "\n",
     "#### Exercise 4\n",
     "\n",
-    "The dataset contains 2500 figure captions. After encoding the andsplitting out 10% of the tokens for validation, we are left with 874488 training tokens. This this number also the number of training samples used to train our NanoGPT model?\n",
+    "The dataset contains 2500 figure captions. After encoding the and splitting out 10% of the tokens for validation, we are left with 874488 training tokens. This this number also the number of training samples used to train our NanoGPT model? If yes, explain why, if not try to estimate the actual number of training samples.\n",
     "\n",
     "#### Exercise 5\n",
     "\n",
