--- a/assignments/assignment_1_GPT.ipynb
+++ b/assignments/assignment_1_GPT.ipynb
@@ -107,7 +107,9 @@
     "Please keep in mind the Colab free tier GPU usage limits (approximately 1.5 hours per day, but may be higher or lower depending on your usage history).\n",
     "\n",
     "To enable a GPU in Colab, navigate to the menu panel -> `Runtime` -> `Change runtime type` -> `T4 GPU` -> `Save`.\n",
-    "When you are done with your work, detach the current runtime session and download the Jupyter notebook file locally.\n"
+    "When you are done with your work, detach the current runtime session and download the Jupyter notebook file locally.\n",
+    "\n",
+    "⚠️ *Note that all assignments are designed to also be doable on the CPUs of your laptops, so you do not have to use Colab or a GPU.* "
    ]
   },
   {
@@ -899,6 +901,8 @@
    "source": [
     "⚠️ *Everything below this line must be submitted as a deliverable for this assignment.*\n",
     "\n",
+    "ℹ️ *Answering the exercises below would require you to implement new code and/or modify the code in above. You can add the code directly in the notebook or in separate Python files, depending on your preference. If you write code in separate files, please do not forget to also submit them. The exercises will also require re-running the training runs, sometimes multiple times. You can split the workload among the group members so things are done more efficiently.*\n",
+    "\n",
     "## Exercises: Practice\n",
     "\n",
     "#### Exercise 1 \n",
@@ -938,7 +942,9 @@
     "\n",
     "## Flipped Classroom Log\n",
     "\n",
-    "ℹ️ *You have to fill this log for both flipped classroom sessions for this assignment.*\n",
+    "ℹ️ *You have to fill this log for both flipped classroom sessions for this assignment. You only fill the log for your group, not together with the group that you interacted with.*\n",
+    "\n",
+    "### Instructions\n",
     "\n",
     "#### Preparation\n",
     "* **Clients:** List specific theoretical or implementation (code) questions prepared before class.\n",
@@ -946,9 +952,48 @@
     "\n",
     "#### Peer Interaction\n",
     "* **Clients:** Summarize the solutions or explanations received.\n",
-    "* **Consultants:** Summarize advice given and specific resources shared.\n",
+    "* **Consultants:** Summarize advice given and specific resources shared.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83b3ac41",
+   "metadata": {},
+   "source": [
+    "### Logs\n",
+    "#### First Flipped Classroom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d3b95de",
+   "metadata": {},
+   "source": [
+    "ℹ️ *Write the log for your group in this cell. Should be in a narrative style, aim for a max. of 600 words.*\n",
     "\n",
-    "\n"
+    "**Role**: Client/Consultant\n",
+    "\n",
+    "**Description** of activities during flipped classroom:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86aa3daf",
+   "metadata": {},
+   "source": [
+    "#### Second Flipped Classroom\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7f175ca",
+   "metadata": {},
+   "source": [
+    "ℹ️ *Write the log for your group in this cell. Should be in a narrative style, aim for a max. of 600 words.*\n",
+    "\n",
+    "**Role**: Client/Consultant\n",
+    "\n",
+    "**Description** of activities during flipped classroom:"
    ]
   }
  ],
