--- a/assignments/assignment_1_GPT.ipynb
+++ b/assignments/assignment_1_GPT.ipynb
@@ -7,7 +7,7 @@
     "id": "5462d987"
    },
    "source": [
-    "# Assignment 1: Generative Pretrained Transformer (GPT)\n",
+    "# Assignment 1: Transformers & Generative Pretrained Transformer (GPT)\n",
     "\n",
     "The goal of this assignment is to master the **Transformer architecture**, which is the engine behind modern Large Language Models (LLMs) such as ChatGPT, Gemini, and DeepSeek. We will implement a compact, decoder-only transformer from scratch, closely following the [NanoGPT](https://github.com/karpathy/nanoGPT) project by Andrej Karpathy.\n",
     "\n",
