--- a/assignments/assignment_1_GPT.ipynb
+++ b/assignments/assignment_1_GPT.ipynb
@@ -953,12 +953,13 @@
     "\n",
     "#### Peer Interaction\n",
     "* **Clients:** Summarize the solutions or explanations received.\n",
-    "* **Consultants:** Summarize advice given and specific resources shared.\n"
+    "* **Consultants:** Summarize advice given and specific resources shared.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "83b3ac41",
+   "id": "14bef2e5",
    "metadata": {},
    "source": [
     "### Logs\n",
@@ -970,6 +971,8 @@
    "id": "8d3b95de",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
     "ℹ️ *Write the log for your group in this cell. Should be in a narrative style, aim for a max. of 600 words.*\n",
     "\n",
     "**Role**: Client/Consultant\n",
