--- a/assignments/assignment_2_VLM.ipynb
+++ b/assignments/assignment_2_VLM.ipynb
@@ -20,11 +20,11 @@
     "\n",
     "As in the previous assignment, we will use the [Open-MELON dataset](https://huggingface.co/datasets/MartiHan/Open-MELON-VL-2.5K) for both of these tasks. \n",
     "\n",
-    "![Low-power view example](assets/low_power_example.png)\n",
+    "![Low-power view example](../assets/low_power_example.png)\n",
     "\n",
     "*Figure 1: Example of low-power (low-magnification) view from Open-MELON dataset*\n",
     "\n",
-    "![High-power view example](assets/high_power_example.png)\n",
+    "![High-power view example](../assets/high_power_example.png)\n",
     "\n",
     "*Figure 2: Example of high-power (high-magnification) view from Open-MELON dataset*"
    ]
