--- a/assignments/assignment_1_GPT.ipynb
+++ b/assignments/assignment_1_GPT.ipynb
@@ -1184,12 +1184,7 @@
    "id": "c0927484",
    "metadata": {},
    "source": [
-    "### Exercise 2 — Hyperparameter Experiments\n",
-    "\n",
-    "The cells below provide a semi-automatic workflow:\n",
-    "1. **Logger cell** — run once to set up the experiment logger (saves to `ex2_experiments.json`)\n",
-    "2. **Runner cell** — change the hyperparameters, run the cell → results are logged automatically\n",
-    "3. **Report cell** — run once at the end to generate all plots + a markdown summary you can paste"
+    "### Exercise 2 "
    ]
   },
   {
