equation render cleaner

--- a/assignments/assignment_1_GPT.ipynb
+++ b/assignments/assignment_1_GPT.ipynb
@@ -1496,12 +1496,12 @@
     "\n",
     "With a fixed budget of `max_iters = 2000`:\n",
     "\n",
-    "$$\\text{Tokens per iteration} = \\text{batch\\_size} \\times \\text{block\\_size}$$\n",
-    "$$\\text{Total tokens seen} = \\text{batch\\_size} \\times \\text{block\\_size} \\times \\text{max\\_iters}$$\n",
+    "$$\\text{Tokens per iteration} = \\text{batch size} \\times \\text{block size}$$\n",
+    "$$\\text{Total tokens seen} = \\text{batch size} \\times \\text{block size} \\times \\text{max iters}$$\n",
     "\n",
     "The full encoded corpus has ~971,654 characters (= tokens, since we use character level tokenization). After the 90/10 train/val split: `train_tokens = floor(0.9 x 971,654) = 874,488`. One epoch means the model has seen this many tokens in total.\n",
     "\n",
-    "$$\\text{Estimated epochs} = \\frac{\\text{batch\\_size} \\times \\text{block\\_size} \\times \\text{max\\_iters}}{\\text{train\\_tokens}} = \\frac{\\text{batch\\_size} \\times 64 \\times 2000}{874{,}488}$$\n",
+    "$$\\text{Estimated epochs} = \\frac{\\text{batch size} \\times \\text{block size} \\times \\text{max iters}}{\\text{train tokens}} = \\frac{\\text{batch size} \\times 64 \\times 2000}{874{,}488}$$\n",
     "\n",
     "Worked example for the baseline (`bs=12`):\n",
     "- Tokens/iteration: 12 x 64 = 768\n",
@@ -1560,9 +1560,9 @@
     "\n",
     "*Figure 7: Loss curves for extreme eval interval variations (25, baseline 200, 1000).*\n",
     "\n",
-    "While the eval interval does not affect the model's final quality, it does affect total training time. Each evaluation call runs `_estimate_loss()`, which performs `2 x eval_iters = 100` extra forward passes (50 per split) with `@torch.no_grad()`. These passes do not update the model but still take time. With `max_iters=2000`, the overhead time scales directly with the number of evaluations.\n",
+    "While the eval interval does not affect the model's final quality, it does affect total training time. Each evaluation call runs `_estimate_loss()`, which performs `2 x eval_iters = 100` extra forward passes (50 per split) with `@torch.no_grad()`. These passes do not update the model but still take time. With `max_iters=2000`, the overhead scales directly with the number of evaluations.\n",
     "\n",
-    "Setting `eval_interval=25` produces 40x more evaluation overhead than `eval_interval=1000`. On CPU, each `_estimate_loss()` call is nontrivial, so very frequent evaluation slows down the total run.\n",
+    "Setting `eval_interval=25` produces 40x more evaluation overhead than `eval_interval=1000`. On CPU, each `_estimate_loss()` call is nontrivial, so very frequent evaluation noticeably slows down the total run.\n",
     "\n",
     "Conclusion: More frequent evaluation does not improve the model. Less frequent evaluation trains faster, but provides less visibility into the learning dynamics (loss curves). The figures confirm that differing eval intervals produce identical training trajectories sampled at different resolutions.\n",
     "\n",
