--- a/assignments/assignment_1_GPT.ipynb
+++ b/assignments/assignment_1_GPT.ipynb
@@ -1449,7 +1449,7 @@
     "\n",
     "<a id=\"fig-lr-6000\"></a>\n",
     "\n",
-    "![Figure 1: Effect of Learning Rate, 6000 iterations](6000iters.png)\n",
+    "![Figure 1: Effect of Learning Rate, 6000 iterations](https://raw.githubusercontent.com/helloimdomas/team5-medical-ai/main/assignments/task1deliverables/6000iters.png)\n",
     "\n",
     "*Figure 1: Loss curves for baseline (lr=1e-3) vs. low learning rate (lr=1e-4) over 6000 iterations.*\n",
     "\n",
@@ -1457,13 +1457,13 @@
     "\n",
     "<a id=\"fig-lr-average\"></a>\n",
     "\n",
-    "![Figure 2: Effect of Learning Rate, average experiments](task1deliverables/ex2_experiments-average_learning_rate.png)\n",
+    "![Figure 2: Effect of Learning Rate, average experiments](https://raw.githubusercontent.com/helloimdomas/team5-medical-ai/main/assignments/task1deliverables/ex2_experiments-average_learning_rate.png)\n",
     "\n",
     "*Figure 2: Loss curves for moderate learning rate variations (lr=1e-4, baseline 1e-3, lr=1e-2).*\n",
     "\n",
     "<a id=\"fig-lr-extreme\"></a>\n",
     "\n",
-    "![Figure 3: Effect of Learning Rate, extreme experiments](task1deliverables/ex2_experiments-extreme_learning_rate.png)\n",
+    "![Figure 3: Effect of Learning Rate, extreme experiments](https://raw.githubusercontent.com/helloimdomas/team5-medical-ai/main/assignments/task1deliverables/ex2_experiments-extreme_learning_rate.png)\n",
     "\n",
     "*Figure 3: Loss curves for extreme learning rate variations (lr=1e-5, baseline 1e-3, lr=5e-2).*\n"
    ]
@@ -1518,13 +1518,13 @@
     "\n",
     "<a id=\"fig-bs-average\"></a>\n",
     "\n",
-    "![Figure 4: Effect of Batch Size, average experiments](task1deliverables/ex2_experiments-average_batch_size.png)\n",
+    "![Figure 4: Effect of Batch Size, average experiments](https://raw.githubusercontent.com/helloimdomas/team5-medical-ai/main/assignments/task1deliverables/ex2_experiments-average_batch_size.png)\n",
     "\n",
     "*Figure 4: Loss curves for moderate batch size variations (bs=4, baseline 12, bs=32).*\n",
     "\n",
     "<a id=\"fig-bs-extreme\"></a>\n",
     "\n",
-    "![Figure 5: Effect of Batch Size, extreme experiments](task1deliverables/ex2_experiments-extreme_batch_size.png)\n",
+    "![Figure 5: Effect of Batch Size, extreme experiments](https://raw.githubusercontent.com/helloimdomas/team5-medical-ai/main/assignments/task1deliverables/ex2_experiments-extreme_batch_size.png)\n",
     "\n",
     "*Figure 5: Loss curves for extreme batch size variations (bs=2, baseline 12, bs=64).*\n",
     "\n",
@@ -1550,13 +1550,13 @@
     "\n",
     "<a id=\"fig-eval-average\"></a>\n",
     "\n",
-    "![Figure 6: Effect of Evaluation Interval, average experiments](task1deliverables/ex2_experiments-average_eval_interval.png)\n",
+    "![Figure 6: Effect of Evaluation Interval, average experiments](https://raw.githubusercontent.com/helloimdomas/team5-medical-ai/main/assignments/task1deliverables/ex2_experiments-average_eval_interval.png)\n",
     "\n",
     "*Figure 6: Loss curves for moderate eval interval variations (25, 50, baseline 200, 500).*\n",
     "\n",
     "<a id=\"fig-eval-extreme\"></a>\n",
     "\n",
-    "![Figure 7: Effect of Evaluation Interval, extreme experiments](task1deliverables/ex2_experiments-extreme_eval_interval.png)\n",
+    "![Figure 7: Effect of Evaluation Interval, extreme experiments](https://raw.githubusercontent.com/helloimdomas/team5-medical-ai/main/assignments/task1deliverables/ex2_experiments-extreme_eval_interval.png)\n",
     "\n",
     "*Figure 7: Loss curves for extreme eval interval variations (25, baseline 200, 1000).*\n",
     "\n",
